--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -173,7 +173,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Designer and Production Tools</h4>
+                        Design and Production Tools</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Erwin, Visual Paradigm, Jira, Pivotal Tracker, GitHub, BitBucket, Slack.<br><br><br></p>
                 </div>
