--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -198,7 +198,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Others</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle Database Administration, Oracle PL/SQL Tuning, VM technologies, Wireshark.<br><br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle Database Administration, Oracle PL/SQL Tuning, VM technologies, QLikView, Wireshark.<br><br><br></p>
                 </div>
             </div>
 
@@ -513,7 +513,7 @@ Graduated with Honors.<br></p>
             <div class="user_text ">
               <p class="mbr-fonts-style  display-7">- Developed a Stock Investment Brokerage Application – Windows WPF and Oracle - Agile (SCRUM).&nbsp;<br>- Developed a recipe book website – ASP.NET and MS SQL Server.<br></p>
             </div>
-            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">Other projects that are not published</div>
+            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">Other projects that are not published because of the databases<br></div>
             <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">&nbsp;</div>
           </div>
         </div>
