--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -233,7 +233,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>BSA/ Full-stack C# / Angular / Delphi Developer</strong></p><p><strong>Free-lancer</strong></p><p><strong>
-</strong><strong>2017 - Present&nbsp;</strong></p><p>During college, I had to take a break because my wife had a problem with her pregnancy and I had to return to Brazil. Meanwhile, I had been working developing an Electronic Medical Record for private clinics in Sao Paulo / Brazil (C#/WPF and MySQL). For the patient and physicians access, I started developing a medical records app for consulting (Angular - MySQL).</p></div>
+</strong><strong>2017 - Present&nbsp;</strong></p><p>During college, I had to take a break because my wife had a problem with her pregnancy and I had to return to Brazil. Meanwhile, I had been working developing an Electronic Medical Record for private clinics in Sao Paulo / Brazil (C#/WPF and Firebase). For the patient and physicians access, I started developing a medical records app for consulting (Angular - Firebase).</p></div>
         </div>
     </div>
 </section>
