--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -121,7 +121,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Programming languages and Frameworks</h4>
+                        Programming languages, Frameworks, and architectures</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        C#, JavaScript, Java, HTML, CSS, JQuery, Pascal, Angular, MEAN Stack, React-Native, Node JS, Oracle PL/SQL, TSQL, Restful API.</p>
                 </div>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Database Servers</h4>
+                        Database Servers<br><br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Oracle, MS-SQL, Firebase, Firebase Real Time, MySQL, MongoDB.<br><br><br><br></p>
                 </div>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Cloud</h4>
+                        Cloud<br><br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        AWS Elastic Beanstalk, AWS S3, Firebase, MongoDB Atlas.<br><br><br><br></p>
                 </div>
@@ -175,7 +175,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Design and Production Tools</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Erwin, Visual Paradigm, Jira, Pivotal Tracker, GitHub, BitBucket, Slack.<br><br><br></p>
+                       Erwin, Visual Paradigm, Jira, Pivotal Tracker, GitHub, BitBucket, Slack.<br><br><br><br></p>
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Development Tools</h4>
+                        Development Tools<br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Visual Studio Code, Microsoft Visual Studio, Embarcadero Rad Studio, PL/SQL Developer, SQL &nbsp;Developer, IntelliJ, Eclipse, Blender, Unity.</p>
                 </div>
@@ -197,8 +197,8 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Others</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle Database Administration, Oracle PL/SQL Tuning, VM technologies, QLikView, Wireshark.<br><br><br></p>
+                        Others<br><br></h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle Database Administration, Oracle PL/SQL Tuning, VM technologies, QLikView, Wireshark.<br><br></p>
                 </div>
             </div>
 
