--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -232,7 +232,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>BSA/ Full-stack C# / Angular / Delphi Developer</strong></p><p><strong>Free-lancer</strong></p><p><strong>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>BSA/ Full-stack C# / Angular &nbsp;Developer</strong></p><p><strong>Free-lancer</strong></p><p><strong>
 </strong><strong>2017 - Present&nbsp;</strong></p><p>During college, I had to take a break because my wife had a problem with her pregnancy and I had to return to Brazil. Meanwhile, I had been working developing an Electronic Medical Record for private clinics in Sao Paulo / Brazil (C#/WPF and Firebase). For the patient and physicians access, I started developing a medical records app for consulting (Angular - Firebase).</p></div>
         </div>
     </div>
@@ -356,7 +356,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">Software Engineering Technician
 <br>
 <br>GPA 4.15 / 4.5<br>
-Graduated with Honors.<br></p>
+Graduated with Honors.<br><br>April 2019</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://www.centennialcollege.ca/" class="btn btn-primary display-4" target="_blank">
                             Learn More</a></div>
@@ -370,7 +370,7 @@ Graduated with Honors.<br></p>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">FIPECAFI - FEA USP<br>(SP - Brazil)</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Specialization in Information Technology<br><br>University of Sao Paulo - USP<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Specialization in Information Technology<br><br>University of Sao Paulo - USP<br><br>December 2002</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://www.fipecafi.org/Home/Inicial" class="btn btn-primary display-4" target="_blank">
                             Learn More
@@ -386,8 +386,7 @@ Graduated with Honors.<br></p>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">FEI - University Centre<br>(SBC - Brazil)&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Bachelor in Electrical Engineering - Computers
-<br><br>
-<br><br></p>
+<br><br><br><br><br>July 1995<br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://portal.fei.edu.br/" class="btn btn-primary display-4" target="_blank">
                             Learn More
