--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -123,7 +123,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Programming languages, Frameworks, and architectures</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       C#, JavaScript, Java, J2EE, HTML, CSS, JQuery, Pascal, Angular, MEAN Stack, React-Native, Node JS, Oracle PL/SQL, TSQL, Restful API.</p>
+                       C#, JavaScript, .NET framework, .NET Core, Java, J2EE, HTML, CSS, JQuery, Pascal, Angular, MEAN Stack, React-Native, Node JS, Laravel (Artisan Backend), Oracle PL/SQL, MS T-SQL, Restful API.<br><br></p>
                 </div>
             </div>
 
@@ -133,9 +133,9 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Database Servers<br><br><br></h4>
+                        Database Servers<br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Oracle, MS-SQL, Firebase, Firebase Real Time, MySQL, MongoDB.<br><br><br><br></p>
+                       Oracle, MS-SQL, Firebase, Firebase Real Time, MySQL, MongoDB.<br><br><br><br><br><br></p>
                 </div>
             </div>
 
@@ -145,9 +145,9 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Cloud<br><br><br></h4>
+                        Cloud<br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       AWS Elastic Beanstalk, AWS S3, Firebase, MongoDB Atlas.<br><br><br><br></p>
+                       AWS Elastic Beanstalk, AWS S3, AWS RDS, Firebase, MongoDB Atlas.<br><br><br><br><br></p>
                 </div>
             </div>
 
@@ -175,7 +175,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Design and Production Tools</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Erwin, Visual Paradigm, Jira, Pivotal Tracker, GitHub, BitBucket, Slack.<br><br><br><br></p>
+                       Erwin, Visual Paradigm, Jira, Pivotal Tracker, Postman, GitHub, BitBucket, Slack.<br><br><br></p>
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Development Tools<br><br></h4>
+                        Development Tools<br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Visual Studio Code, Microsoft Visual Studio, Embarcadero Rad Studio, PL/SQL Developer, SQL &nbsp;Developer, IntelliJ, Eclipse, Blender, Unity.</p>
                 </div>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Others<br><br></h4>
+                        Others<br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle Database Administration, Oracle PL/SQL Tuning, VM technologies, QLikView, Wireshark.<br><br></p>
                 </div>
             </div>
@@ -232,8 +232,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>BSA/ Full-stack C# / Angular &nbsp;Developer</strong></p><p><strong>Free-lancer</strong></p><p><strong>
-</strong><strong>2017 - Present&nbsp;</strong></p><p>During college, I had to take a break because my wife had a problem with her pregnancy and I had to return to Brazil. Meanwhile, I had been working developing an Electronic Medical Record for private clinics in Sao Paulo / Brazil (C#/WPF and Firebase). For the patient and physicians access, I started developing a medical records app for consulting (Angular - Firebase).</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>BSA/ Full-stack C# / Angular &nbsp;Developer</strong></p><p><strong>Free-lancer</strong></p><p><strong></strong><strong>August 2017 - January 2019</strong></p><p>During college, I had to take a break because my wife had a problem with her pregnancy and I had to return to Brazil. Meanwhile, I had been working developing an Electronic Medical Record for private clinics in Sao Paulo / Brazil (C#/WPF and Firebase). For the patient and physicians access, I started developing a medical records app for consulting (Angular - Firebase).</p></div>
         </div>
     </div>
 </section>
@@ -529,10 +528,10 @@ Graduated with Honors.<br><br>April 2019</p>
 <br>- Website developed with C#/ASP.NET; 
 <br>- Entity Framework; 
 <br>- MVC; 
-<br>- MS SQL Server Database - DbaaS - AZURE cloud solution; 
+<br>- MS SQL Server Database; 
 <br>- ASP.NET email/password authentication; 
 <br>- Authorization per user; 
-<br>- Application published into AWS Elastic Beanstalk.<br></p>
+<br>- Application published into AWS Elastic Beanstalk.<br>- Database published into AWS RDS.</p>
             </div>
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7"><a href="http://aspnet.tkemhsyias.us-east-1.elasticbeanstalk.com/" target="_blank"><strong>eCommerce</strong></a><br></div>
             <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">Click the image or the link above to be redirected to the eCommerce Web Page.</div>
