--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -247,10 +247,8 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7">
-                               <strong>Oracle DBA / Senior Infrastructure Analyst</strong><br><strong>A Beneficencia Portuguesa de Sao Paulo (SP - Brazil)</strong><br><strong>June 2008 -April 2015</strong><br><strong><br></strong>*	Administered an Oracle Database RAC and its environment.
-<br>* Maintained Windows, HP-UX, Exadata, Exalogic, and ODA servers.
-<br>*	Performed Oracle PL/SQL tuning and development.<br>* Developed ETL tasks with SSIS for data extraction to Data warehouse, Excel and other destinations; SSRS for department reports; and BI insights and reports using Power BI and QlikView.<br>*	Led projects of network, security, servers, clients, maintenance, and software.
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong>DBA / Senior Infrastructure Analyst</strong><br><strong>A Beneficencia Portuguesa de Sao Paulo (SP - Brazil)</strong><br><strong>June 2008 -April 2015</strong><br><strong><br></strong>* Administered an Oracle Database RAC, Microsoft Cluster SQL Server and their environments.<br>* Maintained Windows, HP-UX, Exadata, Exalogic, and ODA servers.
+<br>* Performed Oracle PL/SQL and Microsoft T-SQL tuning and development.<br>* Developed ETL tasks with SSIS for data extraction to Data warehouse, Excel and other destinations; SSRS for department reports; and BI insights and reports using Power BI and QlikView.<br>*	Led projects of network, security, servers, clients, maintenance, and software.
 <br>*	Administered the data of the hospital as a data administrator and worked in development teams as a designer.
 <br>*	Integrated Agfa RIS/PACS and Laboratory equipment, biometric access control systems, and phone billing with the Hospital’s main system.
 <br>*	Maintained all the Hospital and Third-party subsystems.
