--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -122,7 +122,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Programming languages, Frameworks, and architectures</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Oracle PL/SQL, MS T-SQL, C#, JavaScript, .NET framework, .NET Core, Java, J2EE, HTML, CSS, JQuery, Pascal, Angular, MEAN Stack, React-Native, Node JS, Laravel (Artisan Backend), Restful API.<br><br></p>
+                       Oracle PL/SQL, MS T-SQL, C#, JavaScript, .NET framework, .NET Core, Java, J2EE, Selenium, JMeter, HTML, CSS, JQuery, Pascal, Angular, MEAN Stack, React-Native, Node JS, Laravel (Artisan Backend), Restful API.<br><br></p>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Database Servers<br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Oracle, MS-SQL, Firebase, Firebase Real Time, MySQL, MongoDB.<br><br><br><br><br><br></p>
+                       Oracle, MS-SQL, Firebase, Firebase Real Time, MySQL, MongoDB.<br><br><br><br><br><br><br></p>
                 </div>
             </div>
 
@@ -146,7 +146,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Cloud<br><br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       AWS Elastic Beanstalk, AWS S3, AWS RDS, Firebase, MongoDB Atlas.<br><br><br><br><br></p>
+                       AWS Elastic Beanstalk, AWS S3, AWS RDS, Firebase, MongoDB Atlas.<br><br><br><br><br><br></p>
                 </div>
             </div>
 
@@ -186,7 +186,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Development Tools<br></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Microsoft Visual Studio, Visual Studio Code, Embarcadero Rad Studio, PL/SQL Developer, SQL &nbsp;Developer, IntelliJ, Eclipse, Blender, Unity.</p>
+                       Microsoft Visual Studio, Visual Studio Code, Embarcadero Rad Studio, PL/SQL Developer, SQL &nbsp;Developer, IntelliJ, Eclipse, Blender, Unity.<br><br></p>
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Others<br></h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle and MS SQL Database Administration, PL/SQL and T-SQL Tuning, VM technologies, QLikView, Wireshark.<br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">Agile (SCRUM), Oracle and MS SQL Database Administration, PL/SQL and T-SQL Tuning, VM technologies, QLikView, Wireshark.<br><br><br></p>
                 </div>
             </div>
 
